fix: убрал overflow-x у чата

--- a/src/widgets/ProblemSpaceChat/components/MessageList/MessageList.module.css
+++ b/src/widgets/ProblemSpaceChat/components/MessageList/MessageList.module.css
@@ -10,5 +10,6 @@
 
   background-color: var(--color-white);
 
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
